--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@ body {
 
 
   /* Light mode */
-  --color: rgb(250,250,250);
+  --color: rgb(5,5,5);
+  --background-color: rgb(250,250,250);
   --background-color: var(var(--background-color));
   color: var(--color);
   background-color: var(--background-color);
